Package_Tools/include-C/libxml2/libxml/in_arbeit/fertig/parserInternals.pp


function xmlNewStringInputStream(ctxt:TxmlParserCtxtPtr; buffer:PxmlChar):TxmlParserInputPtr;cdecl;external;
function xmlNewEntityInputStream(ctxt:TxmlParserCtxtPtr; entity:TxmlEntityPtr):TxmlParserInputPtr;cdecl;external;
function xmlPushInput(ctxt:TxmlParserCtxtPtr; input:TxmlParserInputPtr):longint;cdecl;external;
function xmlPopInput(ctxt:TxmlParserCtxtPtr):TxmlChar;cdecl;external;
procedure xmlFreeInputStream(input:TxmlParserInputPtr);cdecl;external;
(* Const before type ignored *)
function xmlNewInputFromFile(ctxt:TxmlParserCtxtPtr; filename:Pchar):TxmlParserInputPtr;cdecl;external;
function xmlNewInputStream(ctxt:TxmlParserCtxtPtr):TxmlParserInputPtr;cdecl;external;
{*
 * Namespaces.
  }
(* Const before type ignored *)
function xmlSplitQName(ctxt:TxmlParserCtxtPtr; name:PxmlChar; prefix:PPxmlChar):PxmlChar;cdecl;external;
{*
 * Generic production rules.
  }
(* Const before type ignored *)
function xmlParseName(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
function xmlParseNmtoken(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
function xmlParseEntityValue(ctxt:TxmlParserCtxtPtr; orig:PPxmlChar):PxmlChar;cdecl;external;
function xmlParseAttValue(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
function xmlParseSystemLiteral(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
function xmlParsePubidLiteral(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
procedure xmlParseCharData(ctxt:TxmlParserCtxtPtr; cdata:longint);cdecl;external;
function xmlParseExternalID(ctxt:TxmlParserCtxtPtr; publicID:PPxmlChar; strict:longint):PxmlChar;cdecl;external;
procedure xmlParseComment(ctxt:TxmlParserCtxtPtr);cdecl;external;
(* Const before type ignored *)
function xmlParsePITarget(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
procedure xmlParsePI(ctxt:TxmlParserCtxtPtr);cdecl;external;
procedure xmlParseNotationDecl(ctxt:TxmlParserCtxtPtr);cdecl;external;
procedure xmlParseEntityDecl(ctxt:TxmlParserCtxtPtr);cdecl;external;
function xmlParseDefaultDecl(ctxt:TxmlParserCtxtPtr; value:PPxmlChar):longint;cdecl;external;
function xmlParseNotationType(ctxt:TxmlParserCtxtPtr):TxmlEnumerationPtr;cdecl;external;
function xmlParseEnumerationType(ctxt:TxmlParserCtxtPtr):TxmlEnumerationPtr;cdecl;external;
function xmlParseEnumeratedType(ctxt:TxmlParserCtxtPtr; tree:PxmlEnumerationPtr):longint;cdecl;external;
function xmlParseAttributeType(ctxt:TxmlParserCtxtPtr; tree:PxmlEnumerationPtr):longint;cdecl;external;
procedure xmlParseAttributeListDecl(ctxt:TxmlParserCtxtPtr);cdecl;external;
function xmlParseElementMixedContentDecl(ctxt:TxmlParserCtxtPtr; inputchk:longint):TxmlElementContentPtr;cdecl;external;
function xmlParseElementChildrenContentDecl(ctxt:TxmlParserCtxtPtr; inputchk:longint):TxmlElementContentPtr;cdecl;external;
(* Const before type ignored *)
function xmlParseElementContentDecl(ctxt:TxmlParserCtxtPtr; name:PxmlChar; result:PxmlElementContentPtr):longint;cdecl;external;
function xmlParseElementDecl(ctxt:TxmlParserCtxtPtr):longint;cdecl;external;
procedure xmlParseMarkupDecl(ctxt:TxmlParserCtxtPtr);cdecl;external;
function xmlParseCharRef(ctxt:TxmlParserCtxtPtr):longint;cdecl;external;
function xmlParseEntityRef(ctxt:TxmlParserCtxtPtr):TxmlEntityPtr;cdecl;external;
procedure xmlParseReference(ctxt:TxmlParserCtxtPtr);cdecl;external;
procedure xmlParsePEReference(ctxt:TxmlParserCtxtPtr);cdecl;external;
procedure xmlParseDocTypeDecl(ctxt:TxmlParserCtxtPtr);cdecl;external;
{$ifdef LIBXML_SAX1_ENABLED}
(* Const before type ignored *)
function xmlParseAttribute(ctxt:TxmlParserCtxtPtr; value:PPxmlChar):PxmlChar;cdecl;external;
(* Const before type ignored *)
function xmlParseStartTag(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
procedure xmlParseEndTag(ctxt:TxmlParserCtxtPtr);cdecl;external;
{$endif}
{ LIBXML_SAX1_ENABLED  }

procedure xmlParseCDSect(ctxt:TxmlParserCtxtPtr);cdecl;external;
procedure xmlParseContent(ctxt:TxmlParserCtxtPtr);cdecl;external;
procedure xmlParseElement(ctxt:TxmlParserCtxtPtr);cdecl;external;
function xmlParseVersionNum(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
function xmlParseVersionInfo(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
function xmlParseEncName(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
(* Const before type ignored *)
function xmlParseEncodingDecl(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
function xmlParseSDDecl(ctxt:TxmlParserCtxtPtr):longint;cdecl;external;
procedure xmlParseXMLDecl(ctxt:TxmlParserCtxtPtr);cdecl;external;
procedure xmlParseTextDecl(ctxt:TxmlParserCtxtPtr);cdecl;external;
procedure xmlParseMisc(ctxt:TxmlParserCtxtPtr);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure xmlParseExternalSubset(ctxt:TxmlParserCtxtPtr; ExternalID:PxmlChar; SystemID:PxmlChar);cdecl;external;
{*
 * XML_SUBSTITUTE_NONE:
 *
 * If no entities need to be substituted.
  }
const
  XML_SUBSTITUTE_NONE = 0;  
{*
 * XML_SUBSTITUTE_REF:
 *
 * Whether general entities need to be substituted.
  }
  XML_SUBSTITUTE_REF = 1;  
{*
 * XML_SUBSTITUTE_PEREF:
 *
 * Whether parameter entities need to be substituted.
  }
  XML_SUBSTITUTE_PEREF = 2;  
{*
 * XML_SUBSTITUTE_BOTH:
 *
 * Both general and parameter entities need to be substituted.
  }
  XML_SUBSTITUTE_BOTH = 3;  
(* Const before type ignored *)

function xmlStringDecodeEntities(ctxt:TxmlParserCtxtPtr; str:PxmlChar; what:longint; end:TxmlChar; end2:TxmlChar; 
           end3:TxmlChar):PxmlChar;cdecl;external;
(* Const before type ignored *)
function xmlStringLenDecodeEntities(ctxt:TxmlParserCtxtPtr; str:PxmlChar; len:longint; what:longint; end:TxmlChar; 
           end2:TxmlChar; end3:TxmlChar):PxmlChar;cdecl;external;
{
 * Generated by MACROS on top of parser.c c.f. PUSH_AND_POP.
  }
function nodePush(ctxt:TxmlParserCtxtPtr; value:TxmlNodePtr):longint;cdecl;external;
function nodePop(ctxt:TxmlParserCtxtPtr):TxmlNodePtr;cdecl;external;
function inputPush(ctxt:TxmlParserCtxtPtr; value:TxmlParserInputPtr):longint;cdecl;external;
function inputPop(ctxt:TxmlParserCtxtPtr):TxmlParserInputPtr;cdecl;external;
(* Const before type ignored *)
function namePop(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
(* Const before type ignored *)
function namePush(ctxt:TxmlParserCtxtPtr; value:PxmlChar):longint;cdecl;external;
{
 * other commodities shared between parser.c and parserInternals.
  }
function xmlSkipBlankChars(ctxt:TxmlParserCtxtPtr):longint;cdecl;external;
(* Const before type ignored *)
function xmlStringCurrentChar(ctxt:TxmlParserCtxtPtr; cur:PxmlChar; len:Plongint):longint;cdecl;external;
procedure xmlParserHandlePEReference(ctxt:TxmlParserCtxtPtr);cdecl;external;
(* Const before type ignored *)
function xmlCheckLanguageID(lang:PxmlChar):longint;cdecl;external;
{
 * Really core function shared with HTML parser.
  }
function xmlCurrentChar(ctxt:TxmlParserCtxtPtr; len:Plongint):longint;cdecl;external;
function xmlCopyCharMultiByte(out:PxmlChar; val:longint):longint;cdecl;external;
function xmlCopyChar(len:longint; out:PxmlChar; val:longint):longint;cdecl;external;
procedure xmlNextChar(ctxt:TxmlParserCtxtPtr);cdecl;external;
procedure xmlParserInputShrink(in:TxmlParserInputPtr);cdecl;external;
{$ifdef LIBXML_HTML_ENABLED}
{
 * Actually comes from the HTML parser but launched from the init stuff.
  }
procedure htmlInitAutoClose;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function htmlCreateFileParserCtxt(filename:Pchar; encoding:Pchar):ThtmlParserCtxtPtr;cdecl;external;
{$endif}
{
 * Specific function to keep track of entities references
 * and used by the XSLT debugger.
  }
{$ifdef LIBXML_LEGACY_ENABLED}
{*
 * xmlEntityReferenceFunc:
 * @ent: the entity
 * @firstNode:  the fist node in the chunk
 * @lastNode:  the last nod in the chunk
 *
 * Callback function used when one needs to be able to track back the
 * provenance of a chunk of nodes inherited from an entity replacement.
  }
type

  TxmlEntityReferenceFunc = procedure (ent:TxmlEntityPtr; firstNode:TxmlNodePtr; lastNode:TxmlNodePtr);cdecl;

procedure xmlSetEntityReferenceFunc(func:TxmlEntityReferenceFunc);cdecl;external;
function xmlParseQuotedString(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
procedure xmlParseNamespace(ctxt:TxmlParserCtxtPtr);cdecl;external;
function xmlNamespaceParseNSDef(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
function xmlScanName(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
function xmlNamespaceParseNCName(ctxt:TxmlParserCtxtPtr):PxmlChar;cdecl;external;
procedure xmlParserHandleReference(ctxt:TxmlParserCtxtPtr);cdecl;external;
function xmlNamespaceParseQName(ctxt:TxmlParserCtxtPtr; prefix:PPxmlChar):PxmlChar;cdecl;external;
{*
 * Entities
  }
function xmlDecodeEntities(ctxt:TxmlParserCtxtPtr; len:longint; what:longint; end:TxmlChar; end2:TxmlChar; 
           end3:TxmlChar):PxmlChar;cdecl;external;
procedure xmlHandleEntity(ctxt:TxmlParserCtxtPtr; entity:TxmlEntityPtr);cdecl;external;
{$endif}
{ LIBXML_LEGACY_ENABLED  }
{$ifdef IN_LIBXML}
{
 * internal only
  }
(* Const before type ignored *)

procedure xmlErrMemory(ctxt:TxmlParserCtxtPtr; extra:Pchar);cdecl;external;
{$endif}
{ C++ end of extern C conditionnal removed }
{$endif}
{ __XML_PARSER_INTERNALS_H__  }

implementation

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_BYTE_CHAR(c : longint) : longint;
begin
  IS_BYTE_CHAR:=xmlIsChar_ch(c);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_CHAR(c : longint) : longint;
begin
  IS_CHAR:=xmlIsCharQ(c);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_CHAR_CH(c : longint) : longint;
begin
  IS_CHAR_CH:=xmlIsChar_ch(c);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_BLANK(c : longint) : longint;
begin
  IS_BLANK:=xmlIsBlankQ(c);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_BLANK_CH(c : longint) : longint;
begin
  IS_BLANK_CH:=xmlIsBlank_ch(c);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_BASECHAR(c : longint) : longint;
begin
  IS_BASECHAR:=xmlIsBaseCharQ(c);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_DIGIT(c : longint) : longint;
begin
  IS_DIGIT:=xmlIsDigitQ(c);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_DIGIT_CH(c : longint) : longint;
begin
  IS_DIGIT_CH:=xmlIsDigit_ch(c);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_COMBINING(c : longint) : longint;
begin
  IS_COMBINING:=xmlIsCombiningQ(c);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_COMBINING_CH(c : longint) : longint;
begin
  IS_COMBINING_CH:=0;
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_EXTENDER(c : longint) : longint;
begin
  IS_EXTENDER:=xmlIsExtenderQ(c);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_EXTENDER_CH(c : longint) : longint;
begin
  IS_EXTENDER_CH:=xmlIsExtender_ch(c);
end;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function IS_IDEOGRAPHIC(c : longint) : longint;
begin
  IS_IDEOGRAPHIC:=xmlIsIdeographicQ(c);
end;
